Minor refactoring of trips controller.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 
 			<h1>Trips</h1>
-			<table class="log table table-striped" ng-hide="loading">
+			<table class="log table table-striped" ng-show="trips">
 				<thead>
 					<tr><th>Started</th><th>Distance</th><th>Total</th></tr>
 				</thead>
