--- a/app/index.html
+++ b/app/index.html
@@ -13,46 +13,12 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="app.css">
 	</head>
-	<body ng-controller="TripsController">
-		<div class="container-fluid">
-			<h1>Add trip</h1>
-
-			<div class="form-group row" ng-cloak>
-				<div class="col-xs-6">
-					<div class="radio" ng-repeat="description in descriptions">
-						<label><input ng-model="newTrip.description" type="radio" value="{{description}}">{{description}}</label>
-					</div>
-				</div>
-
-				<div class="col-xs-6">
-					<div class="radio" ng-repeat="boat in boats">
-						<label><input type="radio" ng-model="newTrip.boat" value="{{boat.id}}">{{boat.name}}</label>
-					</div>
-				</div>
-			</div>
-
-			<div class="form-group" ng-cloak>
-				<h2 class="center">{{newTrip.distance}} km</h2>
-				<input type="range" ng-model="newTrip.distance" step="1" min="1" max="20">
-			</div>
-
-			<div class="form-group">
-				<button ng-disabled="adding" class="btn btn-lg btn-default" ng-click="addTrip(newTrip)">Add trip</button>
-			</div>
-
-			<h1>Trips</h1>
-			<table class="log table table-striped" ng-show="trips">
-				<thead>
-					<tr><th>Started</th><th>Distance</th><th>Total</th></tr>
-				</thead>
-				<tbody>
-					<tr class="slide" ng-repeat="trip in trips track by trip.date" longpress="deleteTrip(trip.id)"><td>{{trip.date}}</td><td>{{trip.distance}}</td><td>{{trip.total}}</td></tr>
-				</tbody>
-			</table>
-		</div>
+	<body>
+		<div ui-view></div>
 
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-animate.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.14/angular-ui-router.min.js"></script>
 
 		<script src="app.js"></script>
 	</body>
