--- a/app/index.html
+++ b/app/index.html
@@ -10,16 +10,13 @@
 
 		<title>Rokort</title>
 
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link rel="stylesheet" href="app.css">
+		<!-- inject:css -->
+		<!-- endinject -->
 	</head>
 	<body>
 		<div ui-view></div>
 
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-animate.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.14/angular-ui-router.min.js"></script>
-
-		<script src="app.js"></script>
+		<!-- inject:js -->
+		<!-- endinject -->
 	</body>
 </html>
