--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 		<!-- endinject -->
 	</head>
 	<body>
-		<div ui-view></div>
+		<div class="container-fluid" ui-view></div>
 
 		<!-- inject:js -->
 		<!-- endinject -->
