--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,10 @@
 		<!-- endinject -->
 	</head>
 	<body>
-		<div class="container-fluid" ui-view></div>
+		<div class="container-fluid">
+			<h1 class="center">Rokort</h1>
+			<trips-log></trips-log>
+		</div>
 
 		<!-- inject:js -->
 		<!-- endinject -->
