--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,9 @@
 		<!-- endinject -->
 	</head>
 	<body>
+		<div class="heading">Rokort</div>
+
 		<div class="container-fluid">
-			<h1 class="center">Rokort</h1>
 			<trips-log></trips-log>
 		</div>
 
