--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="icon" sizes="100x100" href="assets/images/logo.png">
+    <link rel="icon" sizes="100x100" href="logo.png">
     <link rel="manifest" href="manifest.json">
 
     <title>Rokort</title>
